objects/maps__MiniMapSetting__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EntryPoint__c</fullName>
        <label>Entry Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
                <value>
                    <fullName>Console</fullName>
                </value>
                <value>
                    <fullName>Custom VF Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Is_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Maps MiniMap Setting</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MiniMap Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps MiniMap Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>